--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Myportfolio",
   "version": "0.1.0",
-  "homepage": "http://dhruval59.github.io",
+  "homepage": "http://dhruval59.github.io/Myportfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
